added parse article

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         <section class="main">
             <h2>Услуги</h2>
             <p class="servis">Ссылки там где слетел скрипт</p>
-            <h2>Статьи</h2>
-            <p class="Stati">Тут будут ссылки на статьи где слетел скрипт</p>
         </section>    
     </div>
     <script src="app.js"></script>
 </html>
+<a href=""></a>
