--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <button>Запустить</button>
         </header>
         <section class="main">
+            <div class="clearProgressBar">
+                <div class="progressBar"></div>
+                <span class="progressStatus"> 0 / 0</span>
+            </div>
             <h2>Услуги</h2>
             <p class="servis">Ссылки там где слетел скрипт</p>
         </section>    
